feat: change Database and migrate

--- a/KilimoSchoolSystem/appsettings.json
+++ b/KilimoSchoolSystem/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "KilimoSchoolSystemContext": "Server=(localdb)\\mssqllocaldb;Database=KilimoSchoolSystemContext-7a507f0c-9d0e-4d8e-8de2-d7a868f7a0e1;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "KilimoSchoolSystemContext": "Server=localhost;Database=Kilimo;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
   }
 }
